--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,6 +5,7 @@
       {% if site.description %}
         <p class="global-footer__summary">{{ site.description }}</p>
       {% endif %}
+      <p class="global-footer__tagline">Neobrutalist edition · shipping candid field notes.</p>
     </div>
 
     <div class="global-footer__legal">
