--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,7 @@
       {% if site.subtitle %}
         <span class="brand__descriptor">{{ site.subtitle }}</span>
       {% endif %}
+      <span class="brand__badge" aria-hidden="true">Neobrutalist edition</span>
     </a>
 
     <div class="global-header__controls">
